tests/ast_interpreter/err_len_type.expected
<string>:2:11: error: len cannot be applied to Int
    print(len(42));
          ^^^^^^^
