tests/ast_interpreter/err_len_type.nx
fun main() {
    print(len(42));
}
